--- a/src/index.css
+++ b/src/index.css
@@ -37,14 +37,14 @@
     @apply transition-all scale-95 duration-700;
   }
   .traits .splide__slide.is-next > div {
-    @apply 2xl:max-w-[500px] 2xl:drop-shadow-activeSlide scale-100;
+    @apply 2xl:max-w-[500px] 2xl:drop-shadow-activeSlide scale-100 2xl:h-full;
   }
 
   .traits .splide__slide.is-next + .splide__slide > div {
-    @apply 2xl:max-w-[500px] 2xl:drop-shadow-activeSlide scale-100 2xl:translate-x-3;
+    @apply 2xl:max-w-[500px] 2xl:drop-shadow-activeSlide scale-100 2xl:translate-x-3 2xl:h-full;
   }
   .traits .splide__slide.is-active > div {
-    @apply max-w-[500px] drop-shadow-activeSlide 2xl:max-w-[368px] 2xl:drop-shadow-none scale-100;
+    @apply max-w-[500px] drop-shadow-activeSlide 2xl:max-w-[368px] 2xl:drop-shadow-none scale-100 2xl:h-auto h-full;
   }
   .traits .splide__arrow {
     @apply opacity-100 bg-white  drop-shadow-lg w-12 h-12;
